A method that filters employees by shift. Not sure if working properly.